Fix some stuff
* Set actual header for anonymous user menu instead of displaying IP
* Clean up some weird cactions stuff accidentally copied from timeless
* Add real border to boxes so safari/whatever still have some kind of
  outline on multiple box shadows, and give it all a little more pop
  regardless
* Messed up/overflowing thumbnails on mobile

--- a/resources/modules/filepage.less
+++ b/resources/modules/filepage.less
@@ -6,7 +6,6 @@ ul#filetoc {
 	padding: 1.25em 1.75em;
 	margin-top: 1em;
 	margin-bottom: 2em;
-	border: none;
 }
 
 #file {
@@ -17,6 +16,7 @@ ul#filetoc {
 	box-shadow: 0 1px 6px inset rgba( 0, 0, 0, 0.25 ),
 		0 0 20em inset rgba( 0, 0, 0, 0.85 ),
 		0 0 4em inset rgba( 0, 0, 0, 0.45 );
+	border: solid 1px @grey0;
 	border-radius: 3px;
 	color: @grey6;
 	text-align: center;
@@ -35,6 +35,7 @@ ul#filetoc {
 		margin-bottom: 0.5em;
 		border-radius: 2px;
 		box-shadow: 0 1px 6px rgba( 0, 1, 0, 0.15 );
+		border: solid 1px rgba( 0, 1, 0, 0.25 );
 		height: auto;
 		max-width: 100%
 	}
