--- a/resources/screen-mobile.less
+++ b/resources/screen-mobile.less
@@ -262,16 +262,10 @@
 
 #ca-talk {
 	.ca-icon-wat( 'images/talk' );
-
-}
-
-#t-contributions {
-	.ca-icon-wat( 'images/puzzle' );
 }
 
 #ca-addsection {
 	.ca-icon-wat( 'images/plus' );
-
 }
 
 #ca-viewsource {
@@ -289,47 +283,43 @@ li[ id^='ca-nstab-' ] {
 #ca-edit a,
 #ca-history a,
 #ca-talk a,
-#t-contributions,
-#ca-addsection,
-#ca-viewsource,
+#ca-addsection a,
+#ca-viewsource a,
 #ca-view a,
 li[ id^='ca-nstab-' ] a {
 	.ca-icon-only();
 }
 
 // Full-width thumbnails (to avoid having really squished text around them)
+
 div.thumb {
 	float: none;
 }
 
 .thumb {
-	width: 100%;
 	margin: 1em auto;
 }
 
-div.tright {
+.floatright,
+.tright {
 	margin-left: 0;
-
-	.thumbinner {
-		padding-left: 0;
-	}
+	padding-left: 0;
 }
 
-div.tleft {
+.floatleft,
+.tleft {
 	margin-right: 0;
-
-	.thumbinner {
-		padding-right: 0;
-	}
+	padding-right: 0;
 }
 
 .thumbinner {
 	width: 100% !important;
+	box-sizing: border-box;
 }
 
 .thumbimage {
 	display: block;
-	margin: 0 auto .5em;
+	margin: 0 auto 0.5em;
 }
 
 // Keep images from overflowing
