--- a/resources/variables.less
+++ b/resources/variables.less
@@ -79,6 +79,8 @@
 		0 0 1.5em inset rgba( 0, 0, 0, 0.05 );
 	padding: 0.25em 1em;
 	border-radius: 3px;
+	border: solid 1px @grey3;
+	box-sizing: border-box;
 }
 
 // Welp.
